Bug 63246 - [IVB]I-G-T kms_flip/flip-vs-bad-tiling cause [drm:intel_pin_and_fence_fb_obj] *ERROR* Y tiled not allowed for scan out buffers
Summary: [IVB]I-G-T kms_flip/flip-vs-bad-tiling cause [drm:intel_pin_and_fence_fb_obj]...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-08 02:52 UTC by lu hua
Modified: 2017-01-12 07:03 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (17.46 KB, text/plain)
2013-04-08 02:52 UTC, lu hua
no flags Details

Description lu hua 2013-04-08 02:52:49 UTC
Created attachment 77570 [details]
dmesg

System Environment:
--------------------------
Arch:       x86_64
Platform:   Ivybridge
Kernel: (drm-intel-next-queued)99fb11e2d60385a2e10f063afd4cbb06032ef92a

Bug detailed description:
-------------------------
Run new case: ./kms_flip --run-subtest flip-vs-bad-tiling
[drm:intel_pin_and_fence_fb_obj] *ERROR* Y tiled not allowed for scan out buffers appears in dmesg.
It happens on Ivybridge with drm-intel-next-queued and drm-intel-fixes kernel.

output:
Using monotonic timestamps
running testcase: flip-vs-bad-tiling
Beginning flip-vs-bad-tiling on crtc 3, connector 9
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x48 65000
............................................................
flip-vs-bad-tiling on crtc 3, connector 9: PASSED

Beginning flip-vs-bad-tiling on crtc 5, connector 9
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x48 65000
............................................................
flip-vs-bad-tiling on crtc 5, connector 9: PASSED

Beginning flip-vs-bad-tiling on crtc 7, connector 9
  1024x768 60 1024 1048 1184 1344 768 771 777 806 0xa 0x48 65000
............................................................
flip-vs-bad-tiling on crtc 7, connector 9: PASSED

#echo $?
0

Reproduce steps:
----------------
1. ./kms_flip --run-subtest flip-vs-bad-tiling
2. dmesg -r | egrep "<[1-6]>" |grep drm
Comment 1 Daniel Vetter 2013-04-08 08:44:58 UTC
Should be fixed on latest dinq with:

commit 8ae1cb2bdb4bc3e81e7216dd2763e12213de53de
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Sat Apr 6 23:54:56 2013 +0200

    drm/i915: tune down Y tiling scanout warning
Comment 2 lu hua 2013-04-09 06:18:00 UTC
Verified.Fixed.
Comment 3 Jari Tahvanainen 2017-01-12 07:03:17 UTC
Closing verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.